--- a/03_Transforms/Transforms.ipynb
+++ b/03_Transforms/Transforms.ipynb
@@ -104,15 +104,16 @@
    ],
    "source": [
     "import torch\n",
-    "from torchvision import datasets\n",
-    "from torchvision.transforms import ToTensor, Lambda\n",
+    "import torchvision\n",
+    "# from torchvision import datasets\n",
+    "# from torchvision.transforms import ToTensor, Lambda\n",
     "\n",
-    "ds = datasets.FashionMNIST(\n",
+    "ds = torchvision.datasets.FashionMNIST(\n",
     "    root='data',\n",
     "    train=True,\n",
     "    download=True,\n",
-    "    transform=ToTensor(),\n",
-    "    target_transform=Lambda(lambda y: torch.zeros(10, dtype=torch.float).scatter_(0, torch.tensor(y), value=1))  # creates a one-hot one-dimension tensor of length 10\n",
+    "    transform=torchvision.transforms.ToTensor(),\n",
+    "    target_transform=torchvision.transforms.Lambda(lambda y: torch.zeros(10, dtype=torch.float).scatter_(0, torch.tensor(y), value=1))  # creates a one-hot one-dimension tensor of length 10\n",
     ")"
    ]
   },
@@ -143,7 +144,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "target_transform = Lambda(\n",
+    "target_transform = torchvision.transforms.Lambda(\n",
     "    lambda y: torch.zeros(\n",
     "        10,\n",
     "        dtype=torch.float\n",
