--- a/04_Build_the_Neural_Network/Build_the_Neural_Network.ipynb
+++ b/04_Build_the_Neural_Network/Build_the_Neural_Network.ipynb
@@ -21,9 +21,9 @@
    "source": [
     "import os\n",
     "import torch\n",
-    "from torch import nn\n",
-    "from torch.utils.data import DataLoader\n",
-    "from torchvision import datasets, transforms"
+    "# from torch import nn\n",
+    "# from torch.utils.data import DataLoader\n",
+    "# from torchvision import datasets, transforms"
    ]
   },
   {
@@ -76,23 +76,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class NeuralNetwork(nn.Module):\n",
+    "class NeuralNetwork(torch.nn.Module):\n",
     "    '''\n",
     "    This is a 2-hidden-layer multilayer perceptron (MLP) with 512 units per\n",
     "    hidden layer and ReLU activations. It maps a 28x28 grayscale image to a\n",
-    "    10-class classification output.\n",
+    "    10-class classification output. Note: 28**2 = 784\n",
     "    Forward pass flow:\n",
     "        [N,1,28,28] -> [N,784] -> [N,512] -> [N,512] -> [N,10]\n",
     "    '''\n",
     "    def __init__(self):\n",
     "        super().__init__()\n",
-    "        self.flatten = nn.Flatten()\n",
-    "        self.linear_relu_stack = nn.Sequential(  # ordered container, runs layers in sequence.\n",
-    "            nn.Linear(28*28, 512),  # Layer 1: fully connected, projects flattened image -> 512 features\n",
-    "            nn.ReLU(),              # Activation 1: applies ReLU element-wise (max(0,x)), introducing nonlinearities\n",
-    "            nn.Linear(512, 512),    # Layer 2: hidden layer, keeps feature dimension 512\n",
-    "            nn.ReLU(),              # Activation 2: applies ReLU element-wise (max(0,x)), introducing nonlinearities\n",
-    "            nn.Linear(512, 10)      # Layer 3: output layer, 10 units = 1 unit per FashionMNIST class\n",
+    "        self.flatten = torch.nn.Flatten()\n",
+    "        self.linear_relu_stack = torch.nn.Sequential(  # ordered container, runs layers in sequence.\n",
+    "            torch.nn.Linear(28*28, 512),  # Layer 1: fully connected, projects flattened image -> 512 features\n",
+    "            torch.nn.ReLU(),              # Activation 1: applies ReLU element-wise (max(0,x)), introducing nonlinearities\n",
+    "            torch.nn.Linear(512, 512),    # Layer 2: hidden layer, keeps feature dimension 512\n",
+    "            torch.nn.ReLU(),              # Activation 2: applies ReLU element-wise (max(0,x)), introducing nonlinearities\n",
+    "            torch.nn.Linear(512, 10)      # Layer 3: output layer, 10 units = 1 unit per FashionMNIST class\n",
     "        )\n",
     "\n",
     "    def forward(self, x):\n",
@@ -157,14 +157,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicted class: tensor([8])\n"
+      "Predicted class: tensor([5])\n"
      ]
     }
    ],
    "source": [
     "X = torch.rand(1, 28, 28, device=device)\n",
     "logits = model(X)\n",
-    "pred_probab = nn.Softmax(dim=1)(logits)\n",
+    "pred_probab = torch.nn.Softmax(dim=1)(logits)\n",
     "y_pred = pred_probab.argmax(1)\n",
     "print(f\"Predicted class: {y_pred}\")"
    ]
@@ -223,7 +223,7 @@
     }
    ],
    "source": [
-    "flatten = nn.Flatten()\n",
+    "flatten = torch.nn.Flatten()\n",
     "flat_image = flatten(input_image)\n",
     "print(flat_image.size())"
    ]
@@ -253,7 +253,7 @@
     }
    ],
    "source": [
-    "layer1 = nn.Linear(in_features=28*28, out_features=20)\n",
+    "layer1 = torch.nn.Linear(in_features=28*28, out_features=20)\n",
     "hidden1 = layer1(flat_image)\n",
     "print(hidden1.size())"
    ]
@@ -280,32 +280,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Before ReLU: tensor([[ 0.4801, -0.3691,  0.4417, -0.0261,  0.4218,  0.0454, -0.0938, -0.0899,\n",
-      "          0.6204,  0.3612,  0.2228,  0.9825, -0.3221, -0.2441,  0.5065,  0.0515,\n",
-      "         -0.0164,  0.3303, -0.1608, -0.2209],\n",
-      "        [ 0.3995, -0.2207,  0.1956, -0.0415,  0.0428, -0.0914, -0.3814, -0.1659,\n",
-      "          0.3649,  0.1680,  0.3953,  0.4469, -0.4674, -0.3793,  0.1014,  0.6099,\n",
-      "          0.2419, -0.1294, -0.1382, -0.3718],\n",
-      "        [ 0.4446, -0.1656,  0.6187,  0.2144,  0.3120, -0.3731, -0.1368, -0.2520,\n",
-      "          0.6985,  0.2370,  0.4992,  0.4284, -0.1564, -0.1241,  0.3514,  0.4877,\n",
-      "          0.0074,  0.1786, -0.4963, -0.7153]], grad_fn=<AddmmBackward0>)\n",
+      "Before ReLU: tensor([[ 0.3219,  0.1632,  0.0229,  0.0318,  0.2201,  0.2375,  0.2808, -0.0542,\n",
+      "          0.2431,  0.5279,  0.1065,  0.0989,  0.0671, -0.2326, -0.0256,  0.4565,\n",
+      "          0.1842, -0.0632, -0.9052,  0.4593],\n",
+      "        [ 0.2207, -0.1200,  0.2723,  0.1421,  0.4299,  0.1876,  0.5424, -0.4376,\n",
+      "          0.3253,  0.1706, -0.0618,  0.2151,  0.0845, -0.4501,  0.2252,  0.2839,\n",
+      "          0.1492,  0.1834, -0.8131,  0.3164],\n",
+      "        [ 0.1355,  0.0902,  0.1765,  0.5433,  0.6909,  0.3342,  0.3858, -0.0918,\n",
+      "          0.4885,  0.1792,  0.1420,  0.8687,  0.0061, -0.3581, -0.1100, -0.1651,\n",
+      "          0.1445,  0.2705, -0.5637,  0.6648]], grad_fn=<AddmmBackward0>)\n",
       "\n",
       "\n",
-      "After ReLU: tensor([[0.4801, 0.0000, 0.4417, 0.0000, 0.4218, 0.0454, 0.0000, 0.0000, 0.6204,\n",
-      "         0.3612, 0.2228, 0.9825, 0.0000, 0.0000, 0.5065, 0.0515, 0.0000, 0.3303,\n",
-      "         0.0000, 0.0000],\n",
-      "        [0.3995, 0.0000, 0.1956, 0.0000, 0.0428, 0.0000, 0.0000, 0.0000, 0.3649,\n",
-      "         0.1680, 0.3953, 0.4469, 0.0000, 0.0000, 0.1014, 0.6099, 0.2419, 0.0000,\n",
-      "         0.0000, 0.0000],\n",
-      "        [0.4446, 0.0000, 0.6187, 0.2144, 0.3120, 0.0000, 0.0000, 0.0000, 0.6985,\n",
-      "         0.2370, 0.4992, 0.4284, 0.0000, 0.0000, 0.3514, 0.4877, 0.0074, 0.1786,\n",
-      "         0.0000, 0.0000]], grad_fn=<ReluBackward0>)\n"
+      "After ReLU: tensor([[0.3219, 0.1632, 0.0229, 0.0318, 0.2201, 0.2375, 0.2808, 0.0000, 0.2431,\n",
+      "         0.5279, 0.1065, 0.0989, 0.0671, 0.0000, 0.0000, 0.4565, 0.1842, 0.0000,\n",
+      "         0.0000, 0.4593],\n",
+      "        [0.2207, 0.0000, 0.2723, 0.1421, 0.4299, 0.1876, 0.5424, 0.0000, 0.3253,\n",
+      "         0.1706, 0.0000, 0.2151, 0.0845, 0.0000, 0.2252, 0.2839, 0.1492, 0.1834,\n",
+      "         0.0000, 0.3164],\n",
+      "        [0.1355, 0.0902, 0.1765, 0.5433, 0.6909, 0.3342, 0.3858, 0.0000, 0.4885,\n",
+      "         0.1792, 0.1420, 0.8687, 0.0061, 0.0000, 0.0000, 0.0000, 0.1445, 0.2705,\n",
+      "         0.0000, 0.6648]], grad_fn=<ReluBackward0>)\n"
      ]
     }
    ],
    "source": [
     "print(f\"Before ReLU: {hidden1}\\n\\n\")\n",
-    "hidden1 = nn.ReLU()(hidden1)\n",
+    "hidden1 = torch.nn.ReLU()(hidden1)\n",
     "print(f\"After ReLU: {hidden1}\")"
    ]
   },
@@ -326,11 +326,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "seq_modules = nn.Sequential(\n",
+    "seq_modules = torch.nn.Sequential(\n",
     "    flatten,\n",
     "    layer1,\n",
-    "    nn.ReLU(),\n",
-    "    nn.Linear(20, 10)\n",
+    "    torch.nn.ReLU(),\n",
+    "    torch.nn.Linear(20, 10)\n",
     ")\n",
     "input_image = torch.rand(3,28,28)\n",
     "logits = seq_modules(input_image)"
@@ -353,7 +353,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "softmax = nn.Softmax(dim=1)\n",
+    "softmax = torch.nn.Softmax(dim=1)\n",
     "pred_probab = softmax(logits)"
    ]
   },
@@ -391,23 +391,23 @@
       ")\n",
       "\n",
       "\n",
-      "Layer: linear_relu_stack.0.weight | Size: torch.Size([512, 784]) | Values : tensor([[ 0.0340, -0.0118, -0.0042,  ...,  0.0048, -0.0260, -0.0048],\n",
-      "        [-0.0175,  0.0044, -0.0259,  ...,  0.0286,  0.0203, -0.0347]],\n",
+      "Layer: linear_relu_stack.0.weight | Size: torch.Size([512, 784]) | Values : tensor([[ 0.0118, -0.0175, -0.0148,  ..., -0.0006,  0.0309, -0.0051],\n",
+      "        [-0.0314, -0.0119,  0.0152,  ..., -0.0070, -0.0276, -0.0191]],\n",
       "       grad_fn=<SliceBackward0>) \n",
       "\n",
-      "Layer: linear_relu_stack.0.bias | Size: torch.Size([512]) | Values : tensor([-0.0322,  0.0206], grad_fn=<SliceBackward0>) \n",
+      "Layer: linear_relu_stack.0.bias | Size: torch.Size([512]) | Values : tensor([-0.0098, -0.0185], grad_fn=<SliceBackward0>) \n",
       "\n",
-      "Layer: linear_relu_stack.2.weight | Size: torch.Size([512, 512]) | Values : tensor([[-0.0127, -0.0041, -0.0177,  ..., -0.0060, -0.0110,  0.0129],\n",
-      "        [ 0.0323,  0.0264,  0.0414,  ...,  0.0208, -0.0281, -0.0021]],\n",
+      "Layer: linear_relu_stack.2.weight | Size: torch.Size([512, 512]) | Values : tensor([[-0.0015,  0.0106, -0.0271,  ...,  0.0327,  0.0035,  0.0215],\n",
+      "        [-0.0011,  0.0161, -0.0354,  ...,  0.0017, -0.0257,  0.0049]],\n",
       "       grad_fn=<SliceBackward0>) \n",
       "\n",
-      "Layer: linear_relu_stack.2.bias | Size: torch.Size([512]) | Values : tensor([-0.0066, -0.0021], grad_fn=<SliceBackward0>) \n",
+      "Layer: linear_relu_stack.2.bias | Size: torch.Size([512]) | Values : tensor([0.0034, 0.0207], grad_fn=<SliceBackward0>) \n",
       "\n",
-      "Layer: linear_relu_stack.4.weight | Size: torch.Size([10, 512]) | Values : tensor([[ 0.0104, -0.0107, -0.0351,  ..., -0.0295, -0.0319,  0.0056],\n",
-      "        [-0.0220,  0.0274, -0.0020,  ..., -0.0173,  0.0125,  0.0112]],\n",
+      "Layer: linear_relu_stack.4.weight | Size: torch.Size([10, 512]) | Values : tensor([[-0.0161, -0.0387,  0.0116,  ..., -0.0262,  0.0038,  0.0440],\n",
+      "        [ 0.0401,  0.0030,  0.0102,  ...,  0.0310,  0.0136, -0.0009]],\n",
       "       grad_fn=<SliceBackward0>) \n",
       "\n",
-      "Layer: linear_relu_stack.4.bias | Size: torch.Size([10]) | Values : tensor([-0.0181,  0.0246], grad_fn=<SliceBackward0>) \n",
+      "Layer: linear_relu_stack.4.bias | Size: torch.Size([10]) | Values : tensor([-0.0359,  0.0353], grad_fn=<SliceBackward0>) \n",
       "\n"
      ]
     }
