--- a/06_Optimizing_Model_Parameters/Optimizing_Model_Parameters.ipynb
+++ b/06_Optimizing_Model_Parameters/Optimizing_Model_Parameters.ipynb
@@ -110,38 +110,39 @@
    ],
    "source": [
     "import torch\n",
-    "from torch import nn\n",
-    "from torch.utils.data import DataLoader\n",
-    "from torchvision import datasets\n",
-    "from torchvision.transforms import ToTensor\n",
+    "import torchvision\n",
+    "# from torch import nn\n",
+    "# from torch.utils.data import DataLoader\n",
+    "# from torchvision import datasets\n",
+    "# from torchvision.transforms import ToTensor\n",
     "\n",
-    "training_data = datasets.FashionMNIST(\n",
+    "training_data = torchvision.datasets.FashionMNIST(\n",
     "    root=\"data\",\n",
     "    train=True,\n",
     "    download=True,\n",
-    "    transform=ToTensor()\n",
+    "    transform=torchvision.transforms.ToTensor()\n",
     ")\n",
     "\n",
-    "test_data = datasets.FashionMNIST(\n",
+    "test_data = torchvision.datasets.FashionMNIST(\n",
     "    root=\"data\",\n",
     "    train=False,\n",
     "    download=True,\n",
-    "    transform=ToTensor()\n",
+    "    transform=torchvision.transforms.ToTensor()\n",
     ")\n",
     "\n",
-    "train_dataloader = DataLoader(training_data, batch_size=64)\n",
-    "test_dataloader = DataLoader(test_data, batch_size=64)\n",
+    "train_dataloader = torch.utils.data.DataLoader(training_data, batch_size=64)\n",
+    "test_dataloader = torch.utils.data.DataLoader(test_data, batch_size=64)\n",
     "\n",
-    "class NeuralNetwork(nn.Module):\n",
+    "class NeuralNetwork(torch.nn.Module):\n",
     "    def __init__(self):\n",
     "        super().__init__()\n",
-    "        self.flatten = nn.Flatten()\n",
-    "        self.linear_relu_stack = nn.Sequential(\n",
-    "            nn.Linear(28*28, 512),\n",
-    "            nn.ReLU(),\n",
-    "            nn.Linear(512, 512),\n",
-    "            nn.ReLU(),\n",
-    "            nn.Linear(512, 10),\n",
+    "        self.flatten = torch.nn.Flatten()\n",
+    "        self.linear_relu_stack = torch.nn.Sequential(\n",
+    "            torch.nn.Linear(28*28, 512),\n",
+    "            torch.nn.ReLU(),\n",
+    "            torch.nn.Linear(512, 512),\n",
+    "            torch.nn.ReLU(),\n",
+    "            torch.nn.Linear(512, 10),\n",
     "        )\n",
     "\n",
     "    def forward(self, x):\n",
@@ -219,7 +220,7 @@
    "outputs": [],
    "source": [
     "# Initialize the loss function\n",
-    "loss_fn = nn.CrossEntropyLoss()"
+    "loss_fn = torch.nn.CrossEntropyLoss()"
    ]
   },
   {
@@ -334,160 +335,160 @@
      "text": [
       "Epoch 1\n",
       "-------------------------------\n",
-      "loss: 2.312428  [   64/60000]\n",
-      "loss: 2.298895  [ 6464/60000]\n",
-      "loss: 2.272712  [12864/60000]\n",
-      "loss: 2.262373  [19264/60000]\n",
-      "loss: 2.253709  [25664/60000]\n",
-      "loss: 2.214849  [32064/60000]\n",
-      "loss: 2.221825  [38464/60000]\n",
-      "loss: 2.179428  [44864/60000]\n",
-      "loss: 2.177640  [51264/60000]\n",
-      "loss: 2.138434  [57664/60000]\n",
+      "loss: 2.298048  [   64/60000]\n",
+      "loss: 2.289043  [ 6464/60000]\n",
+      "loss: 2.269925  [12864/60000]\n",
+      "loss: 2.264099  [19264/60000]\n",
+      "loss: 2.241923  [25664/60000]\n",
+      "loss: 2.215761  [32064/60000]\n",
+      "loss: 2.233534  [38464/60000]\n",
+      "loss: 2.195048  [44864/60000]\n",
+      "loss: 2.197439  [51264/60000]\n",
+      "loss: 2.161362  [57664/60000]\n",
       "Test Error: \n",
-      " Accuracy: 40.6%, Avg loss: 2.137700 \n",
+      " Accuracy: 36.7%, Avg loss: 2.157906 \n",
       "\n",
       "Epoch 2\n",
       "-------------------------------\n",
-      "loss: 2.154380  [   64/60000]\n",
-      "loss: 2.151559  [ 6464/60000]\n",
-      "loss: 2.079937  [12864/60000]\n",
-      "loss: 2.089109  [19264/60000]\n",
-      "loss: 2.053030  [25664/60000]\n",
-      "loss: 1.982680  [32064/60000]\n",
-      "loss: 2.010756  [38464/60000]\n",
-      "loss: 1.924606  [44864/60000]\n",
-      "loss: 1.928058  [51264/60000]\n",
-      "loss: 1.850127  [57664/60000]\n",
+      "loss: 2.172074  [   64/60000]\n",
+      "loss: 2.165081  [ 6464/60000]\n",
+      "loss: 2.106425  [12864/60000]\n",
+      "loss: 2.118822  [19264/60000]\n",
+      "loss: 2.069063  [25664/60000]\n",
+      "loss: 2.008160  [32064/60000]\n",
+      "loss: 2.050257  [38464/60000]\n",
+      "loss: 1.967977  [44864/60000]\n",
+      "loss: 1.972244  [51264/60000]\n",
+      "loss: 1.901812  [57664/60000]\n",
       "Test Error: \n",
-      " Accuracy: 55.3%, Avg loss: 1.849846 \n",
+      " Accuracy: 55.8%, Avg loss: 1.899408 \n",
       "\n",
       "Epoch 3\n",
       "-------------------------------\n",
-      "loss: 1.897980  [   64/60000]\n",
-      "loss: 1.872077  [ 6464/60000]\n",
-      "loss: 1.736517  [12864/60000]\n",
-      "loss: 1.765554  [19264/60000]\n",
-      "loss: 1.680901  [25664/60000]\n",
-      "loss: 1.628084  [32064/60000]\n",
-      "loss: 1.648455  [38464/60000]\n",
-      "loss: 1.548403  [44864/60000]\n",
-      "loss: 1.572178  [51264/60000]\n",
-      "loss: 1.466236  [57664/60000]\n",
+      "loss: 1.933601  [   64/60000]\n",
+      "loss: 1.906481  [ 6464/60000]\n",
+      "loss: 1.788155  [12864/60000]\n",
+      "loss: 1.824738  [19264/60000]\n",
+      "loss: 1.709453  [25664/60000]\n",
+      "loss: 1.662774  [32064/60000]\n",
+      "loss: 1.698098  [38464/60000]\n",
+      "loss: 1.591599  [44864/60000]\n",
+      "loss: 1.612623  [51264/60000]\n",
+      "loss: 1.513207  [57664/60000]\n",
       "Test Error: \n",
-      " Accuracy: 59.2%, Avg loss: 1.484678 \n",
+      " Accuracy: 61.6%, Avg loss: 1.525353 \n",
       "\n",
       "Epoch 4\n",
       "-------------------------------\n",
-      "loss: 1.562628  [   64/60000]\n",
-      "loss: 1.532922  [ 6464/60000]\n",
-      "loss: 1.371727  [12864/60000]\n",
-      "loss: 1.437489  [19264/60000]\n",
-      "loss: 1.339543  [25664/60000]\n",
-      "loss: 1.328316  [32064/60000]\n",
-      "loss: 1.348632  [38464/60000]\n",
-      "loss: 1.269550  [44864/60000]\n",
-      "loss: 1.307008  [51264/60000]\n",
-      "loss: 1.206780  [57664/60000]\n",
+      "loss: 1.592404  [   64/60000]\n",
+      "loss: 1.557601  [ 6464/60000]\n",
+      "loss: 1.405552  [12864/60000]\n",
+      "loss: 1.474895  [19264/60000]\n",
+      "loss: 1.349559  [25664/60000]\n",
+      "loss: 1.350352  [32064/60000]\n",
+      "loss: 1.375951  [38464/60000]\n",
+      "loss: 1.291626  [44864/60000]\n",
+      "loss: 1.323678  [51264/60000]\n",
+      "loss: 1.232898  [57664/60000]\n",
       "Test Error: \n",
-      " Accuracy: 62.3%, Avg loss: 1.234168 \n",
+      " Accuracy: 63.4%, Avg loss: 1.252635 \n",
       "\n",
       "Epoch 5\n",
       "-------------------------------\n",
-      "loss: 1.314790  [   64/60000]\n",
-      "loss: 1.302934  [ 6464/60000]\n",
-      "loss: 1.130321  [12864/60000]\n",
-      "loss: 1.231234  [19264/60000]\n",
-      "loss: 1.119908  [25664/60000]\n",
-      "loss: 1.137834  [32064/60000]\n",
-      "loss: 1.166874  [38464/60000]\n",
-      "loss: 1.099919  [44864/60000]\n",
-      "loss: 1.141847  [51264/60000]\n",
-      "loss: 1.055545  [57664/60000]\n",
+      "loss: 1.330346  [   64/60000]\n",
+      "loss: 1.312963  [ 6464/60000]\n",
+      "loss: 1.145343  [12864/60000]\n",
+      "loss: 1.250733  [19264/60000]\n",
+      "loss: 1.122947  [25664/60000]\n",
+      "loss: 1.150332  [32064/60000]\n",
+      "loss: 1.182947  [38464/60000]\n",
+      "loss: 1.109899  [44864/60000]\n",
+      "loss: 1.145704  [51264/60000]\n",
+      "loss: 1.072615  [57664/60000]\n",
       "Test Error: \n",
-      " Accuracy: 64.3%, Avg loss: 1.078723 \n",
+      " Accuracy: 64.7%, Avg loss: 1.086850 \n",
       "\n",
       "Epoch 6\n",
       "-------------------------------\n",
-      "loss: 1.149656  [   64/60000]\n",
-      "loss: 1.158899  [ 6464/60000]\n",
-      "loss: 0.971187  [12864/60000]\n",
-      "loss: 1.101896  [19264/60000]\n",
-      "loss: 0.982772  [25664/60000]\n",
-      "loss: 1.010666  [32064/60000]\n",
-      "loss: 1.053303  [38464/60000]\n",
-      "loss: 0.992506  [44864/60000]\n",
-      "loss: 1.033562  [51264/60000]\n",
-      "loss: 0.960940  [57664/60000]\n",
+      "loss: 1.156769  [   64/60000]\n",
+      "loss: 1.160948  [ 6464/60000]\n",
+      "loss: 0.977207  [12864/60000]\n",
+      "loss: 1.114416  [19264/60000]\n",
+      "loss: 0.984044  [25664/60000]\n",
+      "loss: 1.017898  [32064/60000]\n",
+      "loss: 1.063791  [38464/60000]\n",
+      "loss: 0.997081  [44864/60000]\n",
+      "loss: 1.031188  [51264/60000]\n",
+      "loss: 0.972927  [57664/60000]\n",
       "Test Error: \n",
-      " Accuracy: 65.6%, Avg loss: 0.977680 \n",
+      " Accuracy: 65.6%, Avg loss: 0.980755 \n",
       "\n",
       "Epoch 7\n",
       "-------------------------------\n",
-      "loss: 1.034251  [   64/60000]\n",
-      "loss: 1.064863  [ 6464/60000]\n",
-      "loss: 0.861752  [12864/60000]\n",
-      "loss: 1.015697  [19264/60000]\n",
-      "loss: 0.895516  [25664/60000]\n",
-      "loss: 0.921188  [32064/60000]\n",
-      "loss: 0.978287  [38464/60000]\n",
-      "loss: 0.922553  [44864/60000]\n",
-      "loss: 0.958401  [51264/60000]\n",
-      "loss: 0.897427  [57664/60000]\n",
+      "loss: 1.036724  [   64/60000]\n",
+      "loss: 1.062821  [ 6464/60000]\n",
+      "loss: 0.862810  [12864/60000]\n",
+      "loss: 1.024119  [19264/60000]\n",
+      "loss: 0.895911  [25664/60000]\n",
+      "loss: 0.925353  [32064/60000]\n",
+      "loss: 0.985154  [38464/60000]\n",
+      "loss: 0.924938  [44864/60000]\n",
+      "loss: 0.953159  [51264/60000]\n",
+      "loss: 0.906309  [57664/60000]\n",
       "Test Error: \n",
-      " Accuracy: 66.8%, Avg loss: 0.908317 \n",
+      " Accuracy: 66.6%, Avg loss: 0.908931 \n",
       "\n",
       "Epoch 8\n",
       "-------------------------------\n",
-      "loss: 0.949052  [   64/60000]\n",
-      "loss: 0.998857  [ 6464/60000]\n",
-      "loss: 0.783253  [12864/60000]\n",
-      "loss: 0.954535  [19264/60000]\n",
-      "loss: 0.836639  [25664/60000]\n",
-      "loss: 0.855340  [32064/60000]\n",
-      "loss: 0.924950  [38464/60000]\n",
-      "loss: 0.875541  [44864/60000]\n",
-      "loss: 0.903854  [51264/60000]\n",
-      "loss: 0.851008  [57664/60000]\n",
+      "loss: 0.949485  [   64/60000]\n",
+      "loss: 0.994953  [ 6464/60000]\n",
+      "loss: 0.781493  [12864/60000]\n",
+      "loss: 0.960609  [19264/60000]\n",
+      "loss: 0.836436  [25664/60000]\n",
+      "loss: 0.858166  [32064/60000]\n",
+      "loss: 0.929678  [38464/60000]\n",
+      "loss: 0.877431  [44864/60000]\n",
+      "loss: 0.897609  [51264/60000]\n",
+      "loss: 0.858459  [57664/60000]\n",
       "Test Error: \n",
-      " Accuracy: 68.0%, Avg loss: 0.857925 \n",
+      " Accuracy: 67.5%, Avg loss: 0.857501 \n",
       "\n",
       "Epoch 9\n",
       "-------------------------------\n",
-      "loss: 0.883597  [   64/60000]\n",
-      "loss: 0.948599  [ 6464/60000]\n",
-      "loss: 0.724291  [12864/60000]\n",
-      "loss: 0.908430  [19264/60000]\n",
-      "loss: 0.794335  [25664/60000]\n",
-      "loss: 0.805299  [32064/60000]\n",
-      "loss: 0.883942  [38464/60000]\n",
-      "loss: 0.842156  [44864/60000]\n",
-      "loss: 0.862658  [51264/60000]\n",
-      "loss: 0.815153  [57664/60000]\n",
+      "loss: 0.882675  [   64/60000]\n",
+      "loss: 0.944396  [ 6464/60000]\n",
+      "loss: 0.720945  [12864/60000]\n",
+      "loss: 0.913638  [19264/60000]\n",
+      "loss: 0.793833  [25664/60000]\n",
+      "loss: 0.808144  [32064/60000]\n",
+      "loss: 0.887750  [38464/60000]\n",
+      "loss: 0.844953  [44864/60000]\n",
+      "loss: 0.856566  [51264/60000]\n",
+      "loss: 0.821855  [57664/60000]\n",
       "Test Error: \n",
-      " Accuracy: 69.5%, Avg loss: 0.819320 \n",
+      " Accuracy: 68.9%, Avg loss: 0.818805 \n",
       "\n",
       "Epoch 10\n",
       "-------------------------------\n",
-      "loss: 0.831298  [   64/60000]\n",
-      "loss: 0.907827  [ 6464/60000]\n",
-      "loss: 0.677933  [12864/60000]\n",
-      "loss: 0.872199  [19264/60000]\n",
-      "loss: 0.761885  [25664/60000]\n",
-      "loss: 0.766149  [32064/60000]\n",
-      "loss: 0.850458  [38464/60000]\n",
-      "loss: 0.816871  [44864/60000]\n",
-      "loss: 0.830266  [51264/60000]\n",
-      "loss: 0.786277  [57664/60000]\n",
+      "loss: 0.829555  [   64/60000]\n",
+      "loss: 0.904127  [ 6464/60000]\n",
+      "loss: 0.674059  [12864/60000]\n",
+      "loss: 0.877549  [19264/60000]\n",
+      "loss: 0.761335  [25664/60000]\n",
+      "loss: 0.770042  [32064/60000]\n",
+      "loss: 0.853911  [38464/60000]\n",
+      "loss: 0.821272  [44864/60000]\n",
+      "loss: 0.824937  [51264/60000]\n",
+      "loss: 0.792401  [57664/60000]\n",
       "Test Error: \n",
-      " Accuracy: 70.7%, Avg loss: 0.788337 \n",
+      " Accuracy: 70.4%, Avg loss: 0.788201 \n",
       "\n",
       "Done!\n"
      ]
     }
    ],
    "source": [
-    "loss_fn = nn.CrossEntropyLoss()\n",
+    "loss_fn = torch.nn.CrossEntropyLoss()\n",
     "optimizer = torch.optim.SGD(model.parameters(), lr=learning_rate)\n",
     "\n",
     "epochs = 10\n",
