--- a/01_Tensors/Tensors.ipynb
+++ b/01_Tensors/Tensors.ipynb
@@ -19,11 +19,11 @@
      "output_type": "stream",
      "text": [
       "torch.cuda.is_available()=False\n",
-      "tensor([[0.5847, 0.7165, 0.4642],\n",
-      "        [0.0208, 0.6817, 0.5509],\n",
-      "        [0.3755, 0.3242, 0.7610],\n",
-      "        [0.9539, 0.7600, 0.0860],\n",
-      "        [0.4549, 0.8804, 0.3847]])\n",
+      "tensor([[0.7699, 0.1920, 0.9073],\n",
+      "        [0.1630, 0.6050, 0.9756],\n",
+      "        [0.3958, 0.9870, 0.0891],\n",
+      "        [0.6013, 0.0959, 0.5213],\n",
+      "        [0.0496, 0.8285, 0.9672]])\n",
       "tensor is stored on: cpu\n"
      ]
     }
@@ -33,7 +33,7 @@
     "import numpy as np\n",
     "\n",
     "print(f\"{torch.cuda.is_available()=}\")\n",
-    "# print(f\"{torch.accelerator.is_available()=}\") # Likely not available due to installing the CPU compute version of PyTorch\n",
+    "# print(f\"{torch.accelerator.is_available()=}\") # Not available due to old version of PyTorch\n",
     "tensor = torch.rand((5, 3))\n",
     "print(tensor)\n",
     "print(f\"tensor is stored on: {tensor.device}\")"
@@ -142,8 +142,8 @@
       "        [1, 1]]) \n",
       "\n",
       "Random Tensor: \n",
-      " tensor([[0.7738, 0.8670],\n",
-      "        [0.8934, 0.1791]]) \n",
+      " tensor([[0.8753, 0.3438],\n",
+      "        [0.7057, 0.0459]]) \n",
       "\n"
      ]
     }
@@ -176,8 +176,8 @@
      "output_type": "stream",
      "text": [
       "Random Tensor: \n",
-      " tensor([[0.2372, 0.5312, 0.7732],\n",
-      "        [0.9766, 0.4929, 0.2889]]) \n",
+      " tensor([[0.5169, 0.4529, 0.2234],\n",
+      "        [0.8568, 0.9959, 0.5024]]) \n",
       "\n",
       "Ones Tensor: \n",
       " tensor([[1., 1., 1.],\n",
